# ansible-collection-general

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  galaxy.yml  pyproject.toml
meta/: runtime.yml
plugins/lookup/: mac_address.py
plugins/modules/: gen_mac_from_name.py
