[project]
name = "ansible-collection-general"
version = "0.1.0"
description = "Ansible collection with general modules and plugins."
authors = ["Jonas Mauer"]
license = "MIT"
keywords = ["ansible", "collection", "roles", "general", "modules", "plugins"]
repository = "https://github.com/jam82/ansible-collection-general"

[tool.commitizen]
name = "cz_conventional_commits"

[tool.semantic_release]
build_command = "sed -i 's/version: .*/version: {version}/g' galaxy.yml"
commit_message = "build(release): version {version}"
major_on_zero = false
upload_to_pypi = false
upload_to_vcs_release = true
version_variables = [
    "galaxy.yml:version",
]
version_toml = [
    "pyproject.toml:project.version",
]
