[project]
name = "ansible-collection-general"
version = "0.2.0"
description = "Ansible collection with general modules and plugins."
authors = ["Jonas Mauer"]
license = "MIT"
keywords = ["ansible", "collection", "roles", "general", "modules", "plugins"]
repository = "https://github.com/jomrr/ansible-collection-general"

[tool.commitizen]
name = "cz_conventional_commits"

[tool.semantic_release]
commit_message = "build(release): version {version}"
major_on_zero = false
upload_to_pypi = false
upload_to_vcs_release = true
version_pattern = 'galaxy.yml:version: {version}'
version_toml = [
    "pyproject.toml:project.version",
]
